<resources>
    <!--<string name="app_name">FireAssistDispatcher</string>-->
    <!--<string name="login_input_username_hint">Please input your ID</string>-->
    <!--<string name="login_input_password_hint">Please input password</string>-->
    <!--<string name="login">LogIn</string>-->
    <!--<string name="fire_case_no_copy">No Copy</string>-->
    <!--<string name="fire_case_copy">Copy</string>-->
    <!--<string name="login_again">Login One More Time</string>-->
    <string name="app_name">消防救援</string>
    <string name="app_id">58cfbc29</string>
    <string name="login_input_username_hint">请输入用户名</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="logining">正在登录…</string>
    <string name="login_again">登录失败，请检查后重试</string>
    <string name="login_failure">登录失败，请确认用户名和密码的，并确认网络的链接</string>

    <string name="fire_saving">火警救援</string>
    <string name="fire_case_copy">接收</string>
    <string name="fire_case_no_copy">不接收</string>
    <string name="fire_case_pop_hint">请点击接收或不接收</string>

    <string name="default_noti_title">消防救援</string>
    <string name="default_noti_content">天下太平</string>
    <string name="test_text">宝安区福永大洋田中粮福安机器人产业园15栋4楼被困电梯13380333115</string>

    <string name="str_main_item_setting">设置</string>
    <string name="str_main_item_finish_case">结束警情</string>
    <string name="str_main_item_arrive">到达</string>
    <string name="str_main_item_depat">出发</string>
    <string name="str_main_item_video">视频</string>
    <string name="str_main_item_photo">拍照</string>
    <string name="str_main_item_detail">警情详情</string>

    <string name="confirm_finish_case">确定要结束警情？</string>
    <string name="need_navigation_or_not">是否需要导航</string>
    <string name="navigation">导航</string>
    <string name="need">需要</string>
    <string name="no_need">不需要</string>
    <!--hard encoder soft encoder-->
    <string name="hard_encoder">硬编码</string>
    <string name="soft_encoder">软编码</string>
</resources>
