<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

<LinearLayout
    android:paddingTop="150px"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView

        android:background="@drawable/avator_main"
        android:layout_width="250px"
        android:layout_height="258px"
        android:id="@+id/imageView" />
    <TextView
        android:paddingTop="25px"
        android:textColor="@color/white"
        android:typeface="sans"
        android:textSize="@dimen/font_leve1_60px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fire_saving" />
</LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75px">

        <EditText
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textSize="@dimen/font_normal_46px"
            android:id="@+id/login_username"
            android:drawableLeft="@drawable/sel_0_user_icon"
            android:hint="@string/login_input_username_hint"
            android:nextFocusForward="@+id/login_password"
            style="@style/et_login_pwd" />

        <EditText
            android:textSize="@dimen/font_normal_46px"
            android:layout_marginTop="60px"
            android:drawableLeft="@drawable/sel_0_pwd_icon"
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:nextFocusForward="@+id/login_btn"
            android:hint="@string/login_input_password_hint"
            style="@style/et_login_pwd"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginTop="10px"
            android:orientation="horizontal"
            style="@style/login_height_width">

            <CheckBox
                android:gravity="center"
                android:id="@+id/checkbox_remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:button="@null"
                android:textSize="42px"
                android:text="@string/login_remember_password"
                android:drawableLeft="@drawable/sel_0_cb_check"
                android:textColor="@color/white"
                android:drawablePadding="29px"
                 />
            <!-- android:button="@drawable/sel_0_cb_check"-->
            <!--<TextView-->
                <!--android:layout_marginLeft="26px"-->
                <!--android:textSize="42px"-->
                <!--android:textColor="@color/white"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/login_remember_password"/>-->
        </LinearLayout>

        <Button
            android:textSize="@dimen/font_normal_46px"
            android:background="@drawable/sel_0_bt_login"
            android:id="@+id/login_btn"
            style="@style/login_height_width"
            android:textColor="#ee3b0b"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/login" />
    </LinearLayout>


    <TextView
        android:id="@+id/test_response_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>